tooling/nargo_cli/tests/snapshots/execution_success/bit_shifts_comptime/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u64) {
    let two: u64 = 2;
    let three: u64 = 3;
    assert((two << 2) == 8);
    assert(((two << 3) / 8) == two);
    assert((three >> 1) == 1);
    assert((x << 1) == 128);
    assert((x >> 2) == 16);
    regression_2250();
    assert((x << 63) == 0);
    assert(((1 as u64) << 32) == 4294967296);
    let a: i16 = -769;
    assert((a >> 3) == -97);
    regression_8310();
}

fn regression_2250() {
    let a: u1 = 1 >> 1;
    assert(a == 0);
    let b: u32 = 1 >> 32;
    assert(b == 0);
}

fn regression_8310() {
    let x: i64 = -356710612598522715;
    let b: i64 = x >> 64;
    assert(b == 0);
}
